force-app/main/default/objects/Purchase_Order__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <label>Assigned User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>