force-app/main/default/objects/Purchase_Order__c/fields/Assigned_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PO_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>