force-app/main/default/objects/Purchase_Order__c/fields/BRANCH_CODE__c.field-meta.xml
<CustomField>
    <fullName>BRANCH_CODE__c</fullName>
    <label>BRANCH CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>