force-app/main/default/objects/Purchase_Order__c/fields/Buy_from_Country_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Buy_from_Country_Region_Code__c</fullName>
    <label>Buy-from Country/Region Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>