force-app/main/default/objects/Purchase_Order__c/fields/Buy_from_Vendor_No__c.field-meta.xml
<CustomField>
    <fullName>Buy_from_Vendor_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buy-from Vendor No.</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PO_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>