force-app/main/default/objects/Purchase_Order__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PO_Header1</relationshipName>
    <type>Lookup</type>
</CustomField>