force-app/main/default/objects/Purchase_Order__c/fields/GST_Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_Vendor_Type__c</fullName>
    <label>GST Vendor Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>