force-app/main/default/objects/Purchase_Order__c/fields/Pay_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Address__c</fullName>
    <label>Pay-to Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>