force-app/main/default/objects/Purchase_Order__c/fields/Pay_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Contact__c</fullName>
    <label>Pay-to Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>