force-app/main/default/objects/Purchase_Order__c/fields/Pay_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Name__c</fullName>
    <label>Pay-to Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>