force-app/main/default/objects/Purchase_Order__c/fields/Pay_to_Vendor_No__c.field-meta.xml
<CustomField>
    <fullName>Pay_to_Vendor_No__c</fullName>
    <label>Pay-to Vendor No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>