force-app/main/default/objects/Purchase_Order__c/fields/Payment_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Code__c</fullName>
    <label>Payment Terms Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>