force-app/main/default/objects/Purchase_Order__c/fields/PO_Created_By__c.field-meta.xml
<CustomField>
    <fullName>PO_Created_By__c</fullName>
    <label>PO Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>