force-app/main/default/objects/Purchase_Order__c/fields/Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_No__c</fullName>
    <externalId>true</externalId>
    <label>Purchase Order No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>