force-app/main/default/objects/Purchase_Order__c/fields/Uniquey_Key__c.field-meta.xml
<CustomField>
    <fullName>Uniquey_Key__c</fullName>
    <externalId>true</externalId>
    <label>Uniquey Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>