force-app/main/default/objects/Purchase_Order__c/fields/Vendor_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_No__c</fullName>
    <label>Vendor Invoice No.</label>
    <length>35</length>
    <type>Text</type>
</CustomField>