force-app/main/default/objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order_No__c</columns>
    <columns>Dept_Code__c</columns>
    <columns>GST_Vendor_Type__c</columns>
    <columns>Pay_to_Contact__c</columns>
    <columns>Payment_Method_Code__c</columns>
    <columns>Company__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>