force-app/main/default/objects/Purchase_Order__c/listViews/Today_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>Today_Purchase_Orders</fullName>
    <columns>NAME</columns>
    <columns>BRANCH_CODE__c</columns>
    <columns>Buy_from_Vendor_No__c</columns>
    <columns>Company__c</columns>
    <columns>Dept_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Purchase Orders</label>
</ListView>